--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 	padding: 0;
 	transition: scroll 1s;
 }
-menu {
+header {
 	z-index: 10;
 	top: 0;
 	margin-top: 0;
@@ -13,12 +13,14 @@ menu {
 	background-color: white;
 	width: 100%;
 	position: fixed;
+	border-bottom: 1px solid rgba(153, 153, 153, 0.20);
+}
+nav {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-around;
-	border-bottom: 1px solid rgba(153, 153, 153, 0.20);
 }
-menu > a {
+nav a {
 	cursor: pointer;
 	display: block;
 	width: 24.5%;
@@ -27,10 +29,10 @@ menu > a {
 	border: 1px solid white;
 	transition: border 0.5s;
 }
-menu > a:hover {
+nav a:hover {
 	border: 1px solid gray;
 }
-menu > a:visited, menu > a  {
+nav a:visited, nav > a  {
 	text-decoration: none;
 	color: inherit;
 }
@@ -39,7 +41,7 @@ main {
 	margin: 0 25% 0 25%;
 	padding-top: 4em;
 }
-.infoBlock {
+article {
 	position: relative;
 	border: 1px solid #f2f2f2;
 	margin: 2em 0;
@@ -52,12 +54,10 @@ main {
 	vertical-align: middle;
 	padding: 3em;
 	display: block;
-	
 	font-size: 18pt;
 	
 }
 .name > h1 {
-	
 	letter-spacing: 2px;
 	font-size: 44pt;
 }
@@ -66,32 +66,31 @@ main {
 	flex-direction: row;
 	justify-content: space-between;
 }
-.specImg {
-}
+
 .about {
-	
-	
 	padding: 2em;
 }
-.about > h1 {
-	
-}
 .chess {
+	list-style-type: none;
+	margin: auto;
+	padding: 0;
 	display: flex;
 	flex-wrap: wrap;
+	align-content: center;
+	justify-content: center;
 }
-.chess > div {
-	
+.chess > li {
+	display: flex;
+	justify-content: center;
+	align-items: center;
 	font-size: 24pt;
-	width: 33%;
+	width: 33.3333%;
+	height: 30.95%;
 }
-.chess > div > p {
+.chess > li > p {
 	margin: 0;
-	text-align: center;
-	font-size: inherit;
-	padding: 3.07em 0em;
 }
-.chess > div > img {
+.chess > li > img {
 	width: 100%;
 }
 .forgood {
@@ -128,7 +127,7 @@ input::placeholder, .msg::placeholder {
 	max-width: 100%;
 	min-width: 100%;
 }
-form > button {
+form > input[type="submit"] {
 	cursor: pointer;
 	background: white;
 	font-family: Open Sans;
@@ -137,12 +136,14 @@ form > button {
 	border: 1px solid gray;
 	padding: 0.5em 1em;
 	transition: background 1s, color 1s;
+	display: inline-block;
+	width: 20%;
 }
-form > button:hover {
+form > input[type="submit"]:hover {
 	background: darkgray;
 	color: white;
 }
-copyrights {
+footer {
 	display: block;
 	text-align: center;
 	margin-bottom: 1em;
@@ -150,7 +151,7 @@ copyrights {
 ul {
 	list-style-type: none;
 }
-pointer {
+.pointer {
 	position: absolute;
 	top: -6em;
 }
